# eda-demo

./: .claude.org  .gitignore  .pdm-python  README.md  README.org  pyproject.toml
src/eda_demo/: LICENSE  __init__.py  air_model.py  eda_donkeys.py  prolegomena.py  sf_housing.py  text_analysis.py
typings/matplotlib/: __init__.pyi  _afm.pyi  _c_internal_utils.pyi  _cm.pyi  _cm_bivar.pyi  _cm_listed.pyi  _cm_multivar.pyi  _color_data.pyi  _constrained_layout.pyi  _docstring.pyi  _enums.pyi  _fontconfig_pattern.pyi  _layoutgrid.pyi  _mathtext.pyi  _mathtext_data.pyi  _path.pyi  _pylab_helpers.pyi  _text_helpers.pyi  _tight_bbox.pyi  _tight_layout.pyi  _tri.pyi  _type1font.pyi  animation.pyi  artist.pyi  axis.pyi  backend_bases.pyi  backend_managers.pyi  backend_tools.pyi  bezier.pyi  category.pyi  cbook.pyi  cm.pyi  collections.pyi  colorbar.pyi  colorizer.pyi  colors.pyi  container.pyi  contour.pyi  dates.pyi  dviread.pyi  (+35 more)
typings/matplotlib/_api/: __init__.pyi  deprecation.pyi
typings/matplotlib/axes/: __init__.pyi  _axes.pyi  _base.pyi  _secondary_axes.pyi
typings/matplotlib/backends/: __init__.pyi  registry.pyi
typings/matplotlib/projections/: __init__.pyi  geo.pyi  polar.pyi
typings/matplotlib/style/: core.pyi
typings/matplotlib/testing/: __init__.pyi
typings/matplotlib/tests/: __init__.pyi
typings/matplotlib/tri/: _triangulation.pyi  _tricontour.pyi  _trifinder.pyi  _triinterpolate.pyi  _tripcolor.pyi  _triplot.pyi  _trirefine.pyi  _tritools.pyi
