[project]
name = "eda-demo"
version = "0.1.0"
description = "Exploración de datos y creación de gráficas elegantes."
authors = [
    {name = "Sergio Roberto", email = "srhg.0.1.0@gmail.com"},
]
dependencies = ["numpy>=2.2.3", "pandas>=2.2.3", "yfinance>=0.2.54", "matplotlib>=3.10.0", "scipy>=1.15.2", "openpyxl>=3.1.5", "pyarrow>=19.0.1", "sqlalchemy>=2.0.38", "scikit-learn>=1.6.1", "statsmodels>=0.14.4", "seaborn>=0.13.2", "nltk>=3.9.1"]
requires-python = ">=3.13"
readme = {file = "README.org", content-type = "text/org"}
license = "GPL-3.0-only"


[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
